--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
             <span class="ri-scales-3-line"></span>
             <span>Unit Converter</span>
           </li>
+          <li class="sidebar-menu-item tab-item" data-tab="flashcards">
+            <span class="ri-book-mark-line"></span>
+            <span>Flashcards</span>
+          </li>
         </ul>
       </aside>
 
@@ -89,6 +93,17 @@
             </div>
           </div>
         </section>
+        <!-- 暗記カードセクション -->
+        <section class="content-section hidden" id="flashcards">
+          <header class="section-header">
+            <h1 class="section-title">Flashcards</h1>
+          </header>
+          <div class="section-body">
+            <!-- 暗記カードのコンテンツを追加してください -->
+            <div class="flashcards-list" id="flashcards-list"></div>
+          </div>
+        </section>
+        <!-- End 暗記カードセクション -->
       </main>
     </div>
     <script type="module" src="./main.js"></script>
